--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=127.0.0.1;Database=ProdutosLoja;User Id=sa;Password=Coaliza@2025; trustservercertificate=true;"
+        "ConnectionString": "server=127.0.0.1;Initial Catalog=ProdutosLoja;Persist Security Info=True;User ID=sa;Password=Coaliza@2025;MultipleActiveResultSets=True;Pooling=True;Max Pool Size=1000;TrustServerCertificate=True"
     }
 }
