--- a/LojaProdutosV2.csproj
+++ b/LojaProdutosV2.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\NovaPasta\**" />
+    <Content Remove="Services\NovaPasta\**" />
+    <EmbeddedResource Remove="Services\NovaPasta\**" />
+    <None Remove="Services\NovaPasta\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentAssertions" Version="8.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
