--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "ConnectionString": "server=127.0.0.1;Initial Catalog=ProdutosLoja;Persist Security Info=True;User ID=sa;Password=Coaliza@2025;MultipleActiveResultSets=True;Pooling=True;Max Pool Size=1000;TrustServerCertificate=True"
+    },
+    "JWT": {
+        "Key": "MinhaChaveddjfnsjfnsjndfgdfgdfdgd",
+        "Issuer": "LojaProdutosV2",
+        "Audience": "LojaProdutosV2"
     }
-  }
 }
