--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,10 @@
     "ConnectionStrings": {
         "ConnectionString": "server=127.0.0.1;Initial Catalog=ProdutosLoja;Persist Security Info=True;User ID=sa;Password=Coaliza@2025;MultipleActiveResultSets=True;Pooling=True;Max Pool Size=1000;TrustServerCertificate=True"
     },
-    //"JWT": {
-    //    "Key": "MinhaChaveddjfnsjfnsjndfgdfgdfdgd",
-    //    "Issuer": "LojaProdutosV2",
-    //    "Audience": "LojaProdutosV2"
-    //}
+    "JWT": {
+        "Key": "MinhaChaveddjfnsjfnsjndfgdfgdfdgd",
+        "Issuer": "LojaProdutosV2",
+        "Audience": "LojaProdutosV2"
+    }
 
 }
