--- a/LojaProdutosV2.csproj
+++ b/LojaProdutosV2.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LojaProdutos.CrossCutting.IoC\LojaProdutos.CrossCutting.IoC.csproj" />
+    <ProjectReference Include="..\LojaProdutos.Domain\LojaProdutos.Domain.csproj" />
     <ProjectReference Include="..\LojaProdutos.Infra\LojaProdutos.Infra.csproj" />
   </ItemGroup>
 
